# -Front-end-para-ytfzf

./: CMakeLists.txt  CMakePresets.json  README.md
include/: cargarParametros.h  configuracion.h  filtros.h  manual_User.h  menu.h  menuconfiguracion.h  suscripciones.h
src/: cargarParametros.c  configuracion.c  filtros.c  main.c  manual_User.c  menu.c  menuconfiguracion.c  suscripciones.c
temp/: cli-youtube.deb  errores  hueva
temp/cli-youtube/DEBIAN/: control  postinst
temp/cli-youtube/usr/local/: cli-youtube
temp/cli-youtube/usr/share/applications/: cli-youtube.desktop
